syntax = "proto3";

package notifier.v1;

option csharp_namespace = "Notifier.V1";
option go_package = "notifierv1";
option java_multiple_files = true;
option java_outer_classname = "NotifierApiProto";
option java_package = "com.notifier.v1";
option objc_class_prefix = "NXX";
option php_namespace = "Notifier\\V1";

service NotifierAPI {
  rpc ShowNotification(ShowNotificationRequest) returns (ShowNotificationResponse);
}

message ShowNotificationRequest {
  string title = 1;
  string message = 2;
}

message ShowNotificationResponse {}
